# Conversation-Bot

./: .gitignore  README.md  colab-setup.sh  requirements.txt
Checkpoints/: README.md
Logs/: convo.txt  sample-conv1.txt
Model/: conversation.py  dataset.py  encode.py  lstm.py  train.py  trainer.py
Model-Building/Model/: encode.py  trainer.py
Model-Building/datasets/: TaskMaster.pt
Model-Building/preprocessing/: prepare.py  tokenizer.py
Model/Custom-Model/: dataset.py  model.py  tokenizer.py
Model/Custom-Model/Tokenizer/: merges.txt  vocab.json
Model/GPT-2/: testing.py
Tokenizer/: merges.txt  vocab.json
conversation-bot/: pyproject.toml
conversation-bot/conversation_bot/: __init__.py  conversation.py
conversation-bot/tests/: __init__.py  test_conversation_bot.py
datasets/: TaskMaster.pt
datasets/TaskMaster/: TASKMASTER2-README.md
preprocessing/: Preprocessing.ipynb  README.md  clean.py  summary.py  tokenizer.py
