[tool.poetry]
name = "conversation-bot"
version = "0.1.0"
description = ""
authors = ["Ashrit Yarava <ashrity01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.1"
transformers = "^3.0.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
